# sorted-array-repetitions-benchmark

./: .gitignore  README.md
plotting/: plot_results.py
results/: 001.csv
src/: CMakeLists.txt
src/solutions/: CMakeLists.txt  benchmark.hpp  brute_force.hpp  generator.hpp  main.cpp  optimal.cpp  optimal.hpp
src/tests/: CMakeLists.txt  test_generator.cpp  test_solutions.cpp
